changed help page according to feedback

--- a/help.html
+++ b/help.html
@@ -6,7 +6,7 @@
         <title>Document</title>
     </head>
     <body>
-        <h2>Help Page 2</h2>
+        <h2>Help</h2>
 
     We help students become great software engineers.
 
